<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#B6C1C0">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="@color/white"
            android:text="@string/mensajeInsertar"
            android:textSize="20sp"
            android:textAlignment="center"
            android:background="#757474"
            >
        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/Costo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/hint_valor"
            android:inputType="number"
            android:textSize="20sp">
        </EditText>

        <EditText
            android:id="@+id/Detalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:hint="@string/hint_Detalle"
            android:inputType="text"
            android:textSize="20sp">
        </EditText>

        <TextView
            android:id="@+id/Criterio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/Criterio"
            android:textSize="20sp"
            tools:ignore="TouchTargetSizeCheck">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Si"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="5dp"
                android:text="@string/DatoSi"
                android:textSize="20sp"

                >

            </RadioButton>

            <RadioButton
                android:id="@+id/NO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="5dp"
                android:text="@string/DatoNo"
                android:textSize="20sp"
                >

            </RadioButton>

        </LinearLayout>


    </LinearLayout>
</LinearLayout>